--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,11 @@ test:
 #
 production:
   <<: *default
-  database: chat-space_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  # database: chat-space_production
+  # username: root
+  # password: <%= ENV['DATABASE_PASSWORD'] %>
+  # socket: /var/lib/mysql/mysql.sock
+  
