--- a/config/database.yml
+++ b/config/database.yml
@@ -50,8 +50,7 @@ test:
 production:
   <<: *default
   adapter: postgresql
-  encoding: unicode
-  pool: 5
+  database: db_production
   # database: chat-space_production
   # username: root
   # password: <%= ENV['DATABASE_PASSWORD'] %>
